logo + settings + player
Changed the logo to , Click on resize to toggle zoom (removed strech) and changed thedefaults to the best settings in the world imho

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,13 +52,15 @@ android {
 
     buildTypes {
         release {
+            applicationIdSuffix ".sarlaysfork"
+            versionNameSuffix '-FORK'
             debuggable false
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         prerelease {
-            applicationIdSuffix ".prerelease"
+            applicationIdSuffix ".prerelease.sarlaysfork"
             buildConfigField("boolean", "BETA", "true")
             signingConfig signingConfigs.prerelease
             versionNameSuffix '-PRE'
