--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,13 +52,15 @@ android {
 
     buildTypes {
         release {
+            applicationIdSuffix ".sarlaysfork"
+            versionNameSuffix '-FORK'
             debuggable false
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         prerelease {
-            applicationIdSuffix ".prerelease"
+            applicationIdSuffix ".prerelease.sarlaysfork"
             buildConfigField("boolean", "BETA", "true")
             signingConfig signingConfigs.prerelease
             versionNameSuffix '-PRE'
@@ -96,8 +98,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0-alpha03'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0-alpha03'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0-alpha04'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0-alpha04'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     testImplementation 'junit:junit:4.13.2'
@@ -129,8 +131,7 @@ dependencies {
     //implementation "com.google.android.exoplayer:extension-leanback:2.14.0"
 
     // Bug reports
-    implementation "ch.acra:acra-core:5.8.4"
-    implementation "ch.acra:acra-toast:5.8.4"
+    // removed for privacy
 
     compileOnly "com.google.auto.service:auto-service-annotations:1.0"
     //either for java sources:
