--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,15 +52,13 @@ android {
 
     buildTypes {
         release {
-            applicationIdSuffix ".sarlaysfork"
-            versionNameSuffix '-FORK'
             debuggable false
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         prerelease {
-            applicationIdSuffix ".prerelease.sarlaysfork"
+            applicationIdSuffix ".prerelease"
             buildConfigField("boolean", "BETA", "true")
             signingConfig signingConfigs.prerelease
             versionNameSuffix '-PRE'
@@ -131,7 +129,8 @@ dependencies {
     //implementation "com.google.android.exoplayer:extension-leanback:2.14.0"
 
     // Bug reports
-    // removed for privacy
+    implementation "ch.acra:acra-core:5.8.4"
+    implementation "ch.acra:acra-toast:5.8.4"
 
     compileOnly "com.google.auto.service:auto-service-annotations:1.0"
     //either for java sources:
